Add H2 database dependency and update services for pagination; refactor security configuration and application properties