@@ -7,6 +7,7 @@ import com.andali.librarymanager.library_information_system.user.User;
 import com.andali.librarymanager.library_information_system.user.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -70,18 +71,13 @@ public class ReservationService {
     
     public Page<ReservationDTO> getUserReservations(Long userId, int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
-        return reservationRepository.findByUserId(userId).stream()
+        List<ReservationDTO> reservations = reservationRepository.findByUserId(userId).stream()
                 .map(this::mapToReservationDTO)
-                .collect(java.util.stream.Collectors.toList())
-                .stream()
-                .skip((long) page * size)
-                .limit(size)
-                .collect(() -> new org.springframework.data.domain.PageImpl<>(
-                        new java.util.ArrayList<>(),
-                        pageable,
-                        reservationRepository.findByUserId(userId).size()),
-                (c, b) -> c.get().add(b),
-                (c1, c2) -> c1.get().addAll(c2.get()));
+                .toList();
+
+        int start = Math.min(page * size, reservations.size());
+        int end = Math.min(start + size, reservations.size());
+        return new PageImpl<>(reservations.subList(start, end), pageable, reservations.size());
     }
     
     public void cancelReservation(Long reservationId) {
